--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,9 +19,9 @@ main:
 #  - name: Papers
 #    url: /#papers
 #    weight: 11
-#  - name: Projects
-#    url: projects/
-#    weight: 30
+  - name: Projects
+    url: projects/
+    weight: 30
 #  - name: Teaching
 #    url: teaching/
 #    weight: 40
