--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -39,9 +39,10 @@ header:
       text: "Resume"
 
 # Site footer
+#This work is licensed under {license}'
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Chun-Jiang WANG.
     license:
       enable: true
       allow_derivatives: false
